--- a/index.css
+++ b/index.css
@@ -1936,7 +1936,7 @@ wrapper-group-35887-child {
   bottom: 0;
   left: 0;
 }
-.ready-to-get,
+.ready-to-get
 {
   margin: 10px; /* Adding "px" to specify units */
   position: relative;
